--- a/devel/p5-ex-lib/Makefile
+++ b/devel/p5-ex-lib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:23:53 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/14 16:15:49 jperkin Exp $
 
 DISTNAME=	ex-lib-0.90
 PKGNAME=	p5-${DISTNAME}
@@ -15,6 +15,8 @@ DEPENDS+=	p5-lib-abs>=0.90:../../devel/p5-lib-abs
 
 USE_LANGUAGES=		# empty
 PERL5_PACKLIST=		auto/ex/lib/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
