--- a/graphics/adwaita-icon-theme/Makefile
+++ b/graphics/adwaita-icon-theme/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2016/09/30 13:09:10 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2017/06/14 16:23:09 prlw1 Exp $
 
 DISTNAME=		adwaita-icon-theme-3.22.0
 CATEGORIES=		graphics gnome
@@ -26,11 +26,7 @@ PKGCONFIG_OVERRIDE+=	adwaita-icon-theme.pc.in
 # but isn't
 INSTALLATION_DIRS+=	share/icons/Adwaita/96x96/places
 
-FILES_SUBST+=		GTK_UPDATE_ICON_CACHE="${LOCALBASE}/bin/gtk-update-icon-cache"
-FILES_SUBST+=		ICON_THEME_DIR="${LOCALBASE}/share/icons/Adwaita"
-INSTALL_TEMPLATES+=	../../graphics/adwaita-icon-theme/files/icon-cache.tmpl
-DEINSTALL_TEMPLATES+=	../../graphics/adwaita-icon-theme/files/icon-cache.tmpl
-PRINT_PLIST_AWK+=	/^share\/icons\/gnome\/icon-theme.cache$$/ { next; }
+ICON_THEMES=		yes
 
 post-install:
 .for s in 16 22 24 32 48 96 256
