--- a/x11/gtk3/Makefile
+++ b/x11/gtk3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.92 2017/05/19 13:29:05 prlw1 Exp $
+# $NetBSD: Makefile,v 1.93 2017/06/14 16:23:09 prlw1 Exp $
 
 DISTNAME=	gtk+-3.22.9
 PKGNAME=	${DISTNAME:S/gtk/gtk3/}
@@ -69,6 +69,10 @@ CPPFLAGS+=		-DPREFIX="\"${PREFIX}\""
 #
 post-install:
 	${RM} -f ${DESTDIR}${GTK3_IMMODULES_DB}
+
+FILES_SUBST+=		GTK_UPDATE_ICON_CACHE="${PREFIX}/bin/gtk-update-icon-cache"
+FILES_SUBST+=		ICON_THEME_DIR="${LOCALBASE}/share/icons"
+INSTALL_TEMPLATES+=	../../x11/gtk2/files/icon-cache.tmpl
 
 _BUILDING_GTK3=	yes
 .include "modules.mk"
