--- a/www/libmicrohttpd/Makefile
+++ b/www/libmicrohttpd/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2017/05/17 12:39:22 wiz Exp $
+# $NetBSD: Makefile,v 1.33 2017/06/14 20:23:15 wiz Exp $
 
-DISTNAME=	libmicrohttpd-0.9.54
+DISTNAME=	libmicrohttpd-0.9.55
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GNU:=libmicrohttpd/}
 
@@ -13,6 +13,7 @@ USE_LIBTOOL=		yes
 USE_TOOLS+=		pkg-config
 GNU_CONFIGURE=		yes
 INFO_FILES=		yes
+TEST_TARGET=		check
 
 PKGCONFIG_OVERRIDE+=	libmicrohttpd.pc.in
 
