--- a/print/p5-Net-CUPS/Makefile
+++ b/print/p5-Net-CUPS/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2017/06/05 14:24:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.25 2017/06/14 21:26:13 wiz Exp $
 
-DISTNAME=	Net-CUPS-0.61
+DISTNAME=	Net-CUPS-0.64
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	18
 CATEGORIES=	print net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Net/}
 
@@ -15,8 +14,11 @@ USE_LANGUAGES=	c
 
 PERL5_PACKLIST=	auto/Net/CUPS/.packlist
 
+EXTRACT_USING= bsdtar
+
+BUILDLINK_DEPMETHOD.cups-filters= build # image.h
+.include "../../print/cups-filters/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
-BUILDLINK_API_DEPENDS.cups+=	cups>=1.2.2<2.0
 .include "../../print/cups/buildlink3.mk"
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
