--- a/math/py-numpy/Makefile
+++ b/math/py-numpy/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.41 2017/03/24 19:22:27 joerg Exp $
+# $NetBSD: Makefile,v 1.42 2017/06/15 07:02:53 adam Exp $
 
-DISTNAME=	numpy-1.12.1
+DISTNAME=	numpy-1.13.0
 GITHUB_PROJECT=	numpy
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_GITHUB:=numpy/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
