--- a/net/powerdns-recursor/Makefile
+++ b/net/powerdns-recursor/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2017/05/03 08:38:44 jperkin Exp $
+# $NetBSD: Makefile,v 1.23 2017/06/15 07:15:57 fhajny Exp $
 #
 
-DISTNAME=		pdns-recursor-4.0.4
-PKGREVISION=		1
+DISTNAME=		pdns-recursor-4.0.5
 CATEGORIES=		net
 MASTER_SITES=		http://downloads.powerdns.com/releases/
 EXTRACT_SUFX=		.tar.bz2
