--- a/devel/py-setuptools_scm/Makefile
+++ b/devel/py-setuptools_scm/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2017/04/19 17:30:27 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2017/06/16 07:02:32 adam Exp $
 
-DISTNAME=	setuptools_scm-1.15.5
+DISTNAME=	setuptools_scm-1.15.6
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/setuptools_scm/}
