--- a/devel/py-gitinspector/Makefile
+++ b/devel/py-gitinspector/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2017/06/10 15:12:48 kamil Exp $
+# $NetBSD: Makefile,v 1.2 2017/06/16 21:03:58 kamil Exp $
 
 GITHUB_PROJECT=	gitinspector
 DISTNAME=	gitinspector-0.4.4
@@ -18,5 +18,5 @@ post-install:
 	${MV} ${DESTDIR}${PREFIX}/bin/gitinspector \
 		${DESTDIR}${PREFIX}/bin/gitinspector-${PYVERSSUFFIX}
 
-.include "../../lang/python/distutils.mk"
+.include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
