--- a/misc/autocue/Makefile
+++ b/misc/autocue/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2017/05/31 23:05:55 agc Exp $
+# $NetBSD: Makefile,v 1.11 2017/06/17 19:43:20 joerg Exp $
 #
 
 DISTNAME=	autocue-20070224
@@ -9,6 +9,8 @@ DISTFILES=	# empty
 MAINTAINER=	agc@NetBSD.org
 HOMEPAGE=	http://www.alistaircrooks.co.uk/software.html
 COMMENT=	Time-based text formatter, sending output to xcb for pasting
+
+USE_BSD_MAKEFILE=	yes
 
 DEPENDS+=	xcb-[0-9]*:../../x11/xcb
 
