--- a/devel/p5-PAR/Makefile
+++ b/devel/p5-PAR/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2017/06/05 14:23:24 ryoon Exp $
+# $NetBSD: Makefile,v 1.31 2017/06/18 03:14:22 mef Exp $
 #
 
-DISTNAME=		PAR-1.011
+DISTNAME=		PAR-1.015
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=PAR/RSCHUPP/}
 
