--- a/devel/p5-MooX-ConfigFromFile/Makefile
+++ b/devel/p5-MooX-ConfigFromFile/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2017/06/05 14:23:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.10 2017/06/18 03:22:26 mef Exp $
 
-DISTNAME=	MooX-ConfigFromFile-0.007
+DISTNAME=	MooX-ConfigFromFile-0.008
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/R/RE/REHSACK/}
 
